scripts/prd/iptables
# seaweed
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9333:9335 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 19333:19335 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 18081:18084 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 28081:28084 -j ACCEPT
# couchbase
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4369 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8091:8094 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9100:9105 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9998:9999 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 11207 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 11209:11211 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 11214:11215 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 18091:18093 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 21100:21299 -j ACCEPT
# whale-fs
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8089 -j ACCEPT
# varnish
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6081:6082 -j ACCEPT
# nginx
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
